syntax = "proto3";

package net.cydhra.acromantula.proto;

import "google/protobuf/empty.proto";

option java_multiple_files = true;

service ImportService {
  rpc importFile (ImportCommand) returns (google.protobuf.Empty);
}

message ImportCommand {
  oneof directoryId {
    int32 id = 1;
    string directoryPath = 2;
  }
  string fileUrl = 3;
}